pages/styles/style.css
* {
    margin: 0; 
    padding: 0;
    box-sizing: border-box; /* Inclut padding et border dans la taille */
}


body {
    font-family: Arial, sans-serif; 
    background-color: #f5f5f5; 
    color: #111; 
}

/* Conteneur principal centré */
.container {
    width: 90%; 
    max-width: 1200px; 
    margin: 0 auto; /* Centre horizontalement */
}

/* Header */
.site-header {
    background-color: white; 
    border-bottom: 1px solid #ddd; 
    padding: 20px 0; /* Espace vertical */
}

/* Organisation interne du header */
.header-container {
    display: flex; /* Alignement flexible */
    justify-content: space-between; /* Espace entre les blocs */
    align-items: center;/* Centre verticalement */
}

/* Lien du logo */
.logo-link {
    display: flex; 
    align-items: center; 
    text-decoration: none;  
    gap: 10px; /* Espace entre logo et texte */
}

/* Image du logo */
.logo {
    width: 80px; 
    height: auto; 
}

/* Nom du site */
.site-name {
    font-size: 24px; 
    color: #c05f1e; 
    font-weight: bold; /* en gras */
}

/* Liste de navigation */
.nav-list {
    list-style: none; /* Enlève les puces */
    display: flex;
    gap: 25px; 
}

/* Liens de navigation */
.nav-link {
    text-decoration: none; /* Enlève le soulignement */
    color: #111; 
    font-weight: bold; 
}

/* Hover et lien actif */
.nav-link:hover,
.nav-link.active {
    color: #d35400; /* Change la couleur au survol */
}

/* Bouton Admin */
.admin-btn {
    text-decoration: none;
    background-color: #111; 
    color: white; 
    padding: 10px 20px; /* Espace interne */
    border-radius: 20px; /* Coins arrondis */
}

/* Zone principale */
.main-content {
    padding: 40px 0; /* Espace vertical */
}

/* Section hero */
.hero {
    padding: 50px 0; /* Espace vertical */
}

/* Contenu du hero */
.hero-container {
    display: flex; /* en ligne */
    justify-content: space-between; /* Espace entre texte et image */
    align-items: center; /* Alignement vertical */
    gap: 40px; 
}

/* Partie texte du hero */
.hero-text {
    width: 50%; 
}


.hero-subtitle {
    color: #d35400; 
    font-weight: bold; 
    display: block; /* Sur une ligne */
    margin-bottom: 15px; 
}

/* Grand titre principal */
.hero-text h1 {
    font-size: 48px; 
    margin-bottom: 20px;
}

/* Paragraphe du hero */
.hero-text p {
    font-size: 18px; /* Taille du texte */
    margin-bottom: 25px; /* Espace en bas */
    color: #555; /* Gris foncé */
}

/* Bloc des boutons */
.hero-buttons {
    display: flex; /* Boutons sur une ligne */
    gap: 20px;
}

/* Style commun des boutons */
.btn {
    text-decoration: none; 
    padding: 12px 22px; /* Espace interne */
    border-radius: 25px; /* Coins arrondis */
    font-weight: bold; 
}


.btn-primary {
    background-color: #d35400; /* Fond orange */
    color: white; /* Texte blanc */
    
}


.btn-secondary {
    color: #111; 
    background-color: white; 
}

.hero-image img {
    width: 350px;
    height: auto;
}

/* Section features */
.features {
    padding: 50px 0; /* Espace vertical */
}

/* h2 et p */
.section-title {
    text-align: center; /* Centre le texte */
    margin-bottom: 30px; 
}


.section-title h2 {
    font-size: 36px; 
    margin-bottom: 10px; 
}


.section-title p {
    color: #666; 
}

/* Grille des cartes */
.features-grid {
    display: flex; 
    gap: 20px; 
}

/* Carte individuelle */
.feature-card {
    background-color: white; 
    padding: 25px; /* Espace interne */
    border-radius: 10px; 
    flex: 1; /*  carte prend la même place */
    border: 1px solid #ddd; /* Bordure légère */
}


.feature-card h3 {
    margin-bottom: 15px; 
}


.feature-card p {
    color: #555;
}

/* Section discover */
.discover {
    padding: 50px 0; /* Espace vertical */
}

/* Bloc noir */
.discover-box {
    background-color: #111; 
    color: white; 
    text-align: center; 
    padding: 40px; /* Espace interne */
    border-radius: 15px; 
}


.discover-box h2 {
    margin-bottom: 15px; 
    font-size: 36px; 
}

.discover-box p {
    margin-bottom: 20px; 
}

/* Bouton blanc dans bloc noir */
.discover-box .btn-primary {
    background-color: white; /* Fond blanc */
    color: #111; /* Texte noir */
}
.discover-box .hero-buttons {
    justify-content: center;
}
/* Footer */
.site-footer {
    background-color: #111; 
    color: white;
    text-align: center; 
    padding: 20px 0; 
    margin-top: 40px; /* Espace avant footer */
}


.site-footer p {
    margin: 5px 0; /* espace vertical */
}

/* Page recettes */
.recettes-page {
    padding: 50px 0; 
}

/* Bloc titre page */
.page-title {
    text-align: center; 
    margin-bottom: 40px;
}

/* Sous-titre de page */
.page-subtitle {
    display: block; /* Passe à la ligne */
    color: #d35400; 
    font-weight: bold; 
    margin-bottom: 10px; 
}

/* Titre principal de page */
.page-title h1 {
    font-size: 36px;
    margin-bottom: 10px; /* Espace en bas */
}


.page-title p {
    color: #666;
    font-size: 18px;
    max-width: 700px;
    margin: 0 auto; /* Centrage */
}

/* Liste des recettes */
.recettes-list {
    display: grid; 
    grid-template-columns: repeat(3, 1fr); /* 3 colonnes */
    gap: 20px;
}

/* Carte recette */
.recepie {
    background-color: white;
    border: 1px solid #ddd; /* Bordure légère */
    border-radius: 12px; /* Coins arrondis */
    padding: 20px; 
    text-align: center;
}

/* Image de recette */
.recepie img {
    width: 100%; 
    height: 220px; 
    object-fit: cover; /* Coupe l’image proprement */
    border-radius: 10px; 
    margin-bottom: 15px; 
}

/* Titre de recette */
.recepie h2 {
    font-size: 22px; 
    margin-bottom: 10px; 
    color: #111; 
}

/* Texte recette */
.recepie p {
    color: #555; 
    margin-bottom: 15px; 
    font-size: 16px; 
}

/* Page détail recette */
.recette-page {
    padding: 50px 0; 
}

/* Page recette*/
.recette-top {
    display: flex; 
    gap: 30px; 
    margin-bottom: 40px;
}
/* ... */

